--- a/databases.html
+++ b/databases.html
@@ -24,9 +24,9 @@
         <li>=================================</li>
         <li>Data Engineering Techniques</li>
         <ul>
-        <li>Table Relations & Joins Course 2/2 Dataquest</li>
+        <li>Table Relations & Joins Course 2/2 DQ</li>
         <ul>
-            <li>Building & Organizing Complex Queries Course 2/2 Dataquest</li>
+            <li>Building & Organizing Complex Queries Course 2/2 </li>
         </ul>
         <li>Postgres Data Engineering Step3 1/2</li>
         <ul>
@@ -36,8 +36,8 @@
                 <li>Advanced Indexing</li>
             </ul>
         </ul>
-            <li>Algorithms / Data Structures Step4 3/4 Dataquest</li>
-            <li>Recursion & Data Trees Step4 4/4 Dataquest</li>
+            <li>Algorithms / Data Structures Step4 3/4 </li>
+            <li>Recursion & Data Trees Step4 4/4 </li>
         </ul>
         <li>Data Analyst Section - Advanced SQL psql Command Line Step 4 1/4, 2/4, 3/4</li>
 </ul>
