--- a/index.html
+++ b/index.html
@@ -99,9 +99,7 @@
             </div>
 
 
-            <h1>whaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaat!!</h2>
-       
-            
+
 
             <div class="mdl-cell mdl-cell--6-col">
                 <!-- AlsoLearning Wide card with share menu button -->
@@ -153,7 +151,7 @@
     </div>
 
 
-
+            <h1>Hello Ethan King!  I see you !!!</h2>
 
     <div class="mdl-tabs__panel" id="databases-panel">
         <!-- Start of databases.html -->
