--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <header class="mdl-layout__header">
     <div class="mdl-layout__header-row">
       <!-- Title -->
-      <span class="mdl-layout-title"><h2 href="#aboutme-panel">Gerald Tom</h2></span>
+      <span class="mdl-layout-title"><a href="#aboutme-panel"><h2>Gerald Tom</h2></a></span>
     </div>
     <div class="mdl-layout__header-row">
     <!-- Title -->
