--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <span class="mdl-layout__title">
                   <!-- logo here -->
                     <div class="portfolio-logo">
-                      <!-- <img class="banner-logo" src="images/logotailorbrands5.svg" border="0" alt=""> -->
+                      <img class="banner-logo" src="images/logotailorbrands5.svg" border="0" alt="">
                     </div>
                     <span class="mdl-layout__title">Gerald Tom's Portfolio Website - This is a work in progress.........</span>
                 </span>
