--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-pink.min.css" />
     <link rel="stylesheet" href="styles.css" />
-
-
+    <!-- Added Social Media Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
@@ -39,16 +39,61 @@
                 <span class="mdl-layout__title">
                   <!-- logo here -->
                     <div class="portfolio-logo">
-                      <img class="banner-logo" src="images/logotailorbrands5.svg" border="0" alt="">
+                      <!-- <img class="banner-logo" src="images/logotailorbrands5.svg" border="0" alt=""> -->
                     </div>
                     <span class="mdl-layout__title">Gerald Tom's Portfolio Website - This is a work in progress.........</span>
                 </span>
             </div>
 
 
+<!-- Social Media Icons on Banner  -->
+
+<div class="newDiv social_media">
+
+
+    <a href="#" style="color: white;">
+        <i class="fa fa-envelope-o fa-2x"></i>
+        gerald.tom@gmail.com
+    </a>
+
+    <a href="#" style="color: white;">
+        <i class="fa fa-phone fa-2x"></i>
+        +1 917 282 2017
+    </a>
+</div>
 
 
 
+
+<!-- Social Icon -->
+<div class="social_media social_media_border">
+    <a href="#" style="color: white;">
+        <i class="fa fa-linkedin fa-2x"></i>
+        linkedin.com/geraldtom
+    </a>
+
+    <a href="#" style="color: white;">
+        <i class="fa fa-twitter fa-2x"></i>
+        @DjangoAddict</a>
+
+    <a href="#" style="color: white;">
+        <i class="fa fa-youtube fa-2x" ></i>
+        @DjangoAddict
+    </a>
+
+    <a href="#" style="color: white;">
+        <i class="fa fa-github fa-2x"></i>
+        @DjangoAddict
+    </a>
+
+    <a href="#" style="color: white;">
+        <i class="fa fa-file-pdf-o fa-2x"></i>
+        Download Resume
+    </a>
+</div>
+
+
+<!-- End of Social Media Icons on Banner  -->
 
 
 
@@ -66,9 +111,9 @@
             <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
                 <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
                     <a class="mdl-navigation__link is-active" href="index.html">Portfolio</a>
-	
+
 		<!-- <a class="mdl-navigation__link" href="blog.html">Blog</a> -->
-                    
+
                     <a class="mdl-navigation__link" href="about.html">About</a>
                     <a class="mdl-navigation__link" href="contact.html">Contact</a>
                 </nav>
@@ -86,7 +131,7 @@
 
 
 
-        
+
         <main class="mdl-layout__content">
             <div class="mdl-grid portfolio-max-width">
                 <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
@@ -203,7 +248,7 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                     <div class="mdl-card__supporting-text">
                         Due to my interest in exchange rate data at the time, this is a simple web scrape of Caribbe Express
                          (a currency exchange site) during my time overseas.  The original specifications called to use celery / redis
-                         to do a daily scrape and insert to a database allowing a historical view of interest rates posted to the web-forum.  
+                         to do a daily scrape and insert to a database allowing a historical view of interest rates posted to the web-forum.
 			The web-forum was run off of FlaskBB meant as a platform for expats to communicate.
                           Sample code and demonstration to come...
                     </div>
