--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="portfolio-logo">
                       <!-- <img class="banner-logo" src="images/logotailorbrands5.svg" border="0" alt=""> -->
                     </div>
-                    <span class="mdl-layout__title">Gerald Tom's Portfolio Website - This is a work in progress.........</span>
+                    <span class="mdl-layout__title">Gerald Tom's Portfolio Website - work in progress.....</span>
                 </span>
             </div>
 
@@ -72,16 +72,17 @@
         linkedin.com/geraldtom
     </a>
 
-    <a href="#" style="color: white;">
+    <a href="https://twitter.com/djangoaddict" style="color: white;">
         <i class="fa fa-twitter fa-2x"></i>
         @DjangoAddict</a>
 
-    <a href="#" style="color: white;">
+<!-- https://www.youtube.com/channel/UCvbyctBHbdCMVquGJ6TPdrg -->
+   <!--  <a href="#" style="color: white;">
         <i class="fa fa-youtube fa-2x" ></i>
         @DjangoAddict
-    </a>
+    </a> -->
 
-    <a href="#" style="color: white;">
+    <a href="https://github.com/DjangoAddict/" style="color: white;">
         <i class="fa fa-github fa-2x"></i>
         @DjangoAddict
     </a>
