--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 <!-- Social Icon -->
 <div class="social_media social_media_border">
-    <a href="#" style="color: white;">
+    <a href="www.linkedin.com/in/geraldtom" style="color: white;">
         <i class="fa fa-linkedin fa-2x"></i>
         linkedin.com/geraldtom
     </a>
