--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="description" content="A portfolio template that uses Material Design Lite.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>Gerald Tom | Data Analytics and Full-Stack Web Development</title>
-    <link rel="shortcut icon" type="image/jpg" href="images/gt.jpg"/>
+    <link rel="shortcut icon" type="image/jpg" href="images/gt.png"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-pink.min.css" />
     <link rel="stylesheet" href="styles.css" />
