--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <div class="social_media social_media_border">
     <a href="www.linkedin.com/in/geraldtom" style="color: white;">
         <i class="fa fa-linkedin fa-2x"></i>
-        linkedin.com/geraldtom
+        LinkedIn
     </a>
 
     <a href="https://twitter.com/djangoaddict" style="color: white;">
