--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <!-- Social Icon -->
 <div class="social_media social_media_border">
-    <a href="www.linkedin.com/in/geraldtom" style="color: white;">
+    <a href="https://www.linkedin.com/in/geraldtom" style="color: white;">
         <i class="fa fa-linkedin fa-2x"></i>
         LinkedIn
     </a>
