--- a/index.html
+++ b/index.html
@@ -64,13 +64,11 @@
 </div>
 
 
-
-
 <!-- Social Icon -->
 <div class="social_media social_media_border">
     <a href="https://www.linkedin.com/in/geraldtom" style="color: white;">
         <i class="fa fa-linkedin fa-2x"></i>
-        LinkedIn
+        LinkedIn/in/geraldtom
     </a>
 
     <a href="https://twitter.com/djangoaddict" style="color: white;">
