--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="mdl-layout__header-row portfolio-logo-row">
                 <span class="mdl-layout__title">
                   <!-- logo here -->
-                    <div class="portfolio-logo">
+                    <div class="portfolio-logo"><a href="https://gerald-tom.com/index.html"></a>
                       <!-- <img class="banner-logo" src="images/logotailorbrands5.svg" border="0" alt=""> -->
                     </div>
                     <span class="mdl-layout__title">Gerald Tom's Portfolio Website - work in progress.....</span>
