--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <div class="portfolio-logo"><a href="https://gerald-tom.com/index.html"></a>
                       <!-- <img class="banner-logo" src="images/logotailorbrands5.svg" border="0" alt=""> -->
                     </div>
-                    <span class="mdl-layout__title">Gerald Tom's Portfolio Website - work in progress.....</span>
+                    <span class="mdl-layout__title">Gerald Tom's Portfolio Website - work in progress.....<a href="https://gerald-tom.com/index.html"></a></span>
                 </span>
             </div>
 
