--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
             <div class="mdl-layout__header-row portfolio-logo-row">
                 <span class="mdl-layout__title">
                   <!-- logo here -->
-                    <div class="portfolio-logo"><a href="https://gerald-tom.com/index.html"></a>
+		<a href="https://gerald-tom.com/index.html">
+                    <div class="portfolio-logo">
                       <!-- <img class="banner-logo" src="images/logotailorbrands5.svg" border="0" alt=""> -->
-                    </div>
-                    <span class="mdl-layout__title">Gerald Tom's Portfolio Website - work in progress.....<a href="https://gerald-tom.com/index.html"></a></span>
+                    </div></a>
+                    <span class="mdl-layout__title"<a href="https://gerald-tom.com/index.html">>Gerald Tom's Portfolio Website - work in progress.....</a></span>
                 </span>
             </div>
 
