--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!doctype html>
+<!-- This template was used for speed rather than elegant code.  Yes, there no template inheritance as jinja does not work with GitHub Pages.  But hey, whatever works! -->
+
 <!--
   Material Design Lite
   Copyright 2015 Google Inc. All rights reserved.
