--- a/index.html
+++ b/index.html
@@ -95,7 +95,12 @@
     </a>
 </div>
 
-
+<p></p>
+  <a href="#screens">
+    <button class="mdl-button mdl-button--colored mdl-js-button mdl-button--fab mdl-js-ripple-effect">
+      <i class="material-icons">expand_more</i>
+    </button>
+  </a>
 <!-- End of Social Media Icons on Banner  -->
 
 
