--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
     <button class="mdl-button mdl-button--colored mdl-js-button mdl-button--fab mdl-js-ripple-effect">
       <i class="material-icons">expand_more</i>
     </button>
+	  See More ...
   </a>
 <!-- End of Social Media Icons on Banner  -->
 
@@ -143,7 +144,7 @@
         <main class="mdl-layout__content">
             <div class="mdl-grid portfolio-max-width">
                 <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-		<a name="screens"></a>
+		
                     <div class="mdl-card__media">
                         <a href="https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0"   target="popup"
   onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0','popup','width=1200,height=1200'); return false;""><img class="article-image" src=" images/example-work02.jpg" border="0" alt=""></a>
@@ -229,6 +230,8 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
 
 
                 <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
+			
+		<a name="screens"></a>
                     <div class="mdl-card__media">
                         <img class="article-image" src=" images/example-work07.jpg" border="0" alt="">
                     </div>
