--- a/index.html
+++ b/index.html
@@ -93,15 +93,20 @@
         <i class="fa fa-file-pdf-o fa-2x"></i>
         Download Resume
     </a>
-</div>
-
+	
+	
+	<!-- Down "See more" button -->
 <p></p>
   <a href="#screens">
     <button class="mdl-button mdl-button--colored mdl-js-button mdl-button--fab mdl-js-ripple-effect">
       <i class="material-icons">expand_more</i>
     </button>
 	  See More ...
-  </a>
+  </a>	
+	
+</div>
+
+
 <!-- End of Social Media Icons on Banner  -->
 
 
