--- a/index.html
+++ b/index.html
@@ -106,13 +106,16 @@
 	
 </div>
 
-
 <!-- End of Social Media Icons on Banner  -->
 
-
-
-
-
+		
+<div class="see_button see_border">
+  <a href="#screens">
+    <button class="mdl-button mdl-button--colored mdl-js-button mdl-button--fab mdl-js-ripple-effect">
+      <i class="material-icons">expand_more</i>
+    </button>
+	  See More ....
+</div>
 
 
 
