--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <button class="mdl-button mdl-button--colored mdl-js-button mdl-button--fab mdl-js-ripple-effect">
       <i class="material-icons">expand_more</i>
     </button>
-	  See More ....
+	  More
 </div>
 
 
