--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div class="portfolio-logo">
                       <!-- <img class="banner-logo" src="images/logotailorbrands5.svg" border="0" alt=""> -->
                     </div></a>
-                    <span class="mdl-layout__title"><a href="https://gerald-tom.com/index.html">Gerald Tom's Portfolio Website - work in progress..... v3</a></span>
+                    <span class="mdl-layout__title"><a href="https://gerald-tom.com/index.html">Full Stack Web Development & Data Analytics</a></span>
                 </span>
             </div>
 
