--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                         <h2 class="mdl-card__title-text">Real Estate / Financial Modeling</h2>
                     </div>
                     <div class="mdl-card__supporting-text">
-                        Financial Modeling links to come...
+                        Private Equity and Investment Advisory calculations including Discounted Cash Flows, Net Present Valuations, Cash on Cash, Internal Rate of Returns, Leveraged Returns, After-Tax Returns.  Underwriting for asset-types including Mixed-Use, Retail, Office, Hotel and Multi-family buildings.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
                         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-example01.html">Read more</a>
@@ -345,7 +345,7 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                         <h2 class="mdl-card__title-text">Hospitality / Management</h2>
                     </div>
                     <div class="mdl-card__supporting-text">
-                        Management / Hospitality links to come... Ideas for boutique hotel management software...
+                        Payroll Management, Cost Controls, Inventory Control, Pricing and Break-Even Analysis, RevPAR and for Hospitality Management and Consultanting.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
                         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-example01.html">Read more</a>
