--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                     <div class="mdl-card__supporting-text">
 
 			    
-                         My time as a real estate investment advisor lead me to an interest in real estate data.  This is a
+                         Real Estate Investment Advisory has lead me to an interest in real estate data.  This is a
                          analyitical warehouse of New York building and ownership data comprised of
                          5+ billion cells of data, optimized to process queries in milliseconds.  The database was
                          written by first drawing up the architecture with an ERD diagram and building bridge tables.
-                           Optimization techniques were then implemented on the database side including multi-column
+                           Optimization techniques were implemented on the database side including multi-column
                             indexing, materialized views and explain analyze in raw postgresql.  The database was
                             implemented on the frontend user-interface with flask.  The program is being used as a
                             proprietary database to generate client leads.
