--- a/index.html
+++ b/index.html
@@ -316,11 +316,6 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
 
 
 
-
-
-
-
-
                 <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
                     <div class="mdl-card__media">
                         <img class="article-image" src=" images/example-work06.jpg" border="0" alt="">
@@ -329,7 +324,9 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                         <h2 class="mdl-card__title-text">Real Estate / Financial Modeling</h2>
                     </div>
                     <div class="mdl-card__supporting-text">
-                        Private Equity and Investment Advisory calculations including Discounted Cash Flows, Net Present Valuations, Cash on Cash, Internal Rate of Returns, Leveraged Returns, After-Tax Returns.  Underwriting for asset-types including Mixed-Use, Retail, Office, Hotel and Multi-family buildings.
+                        Underwriting for asset-types including Mixed-Use, Retail, Office, Hotel and Multi-family buildings.	
+			    <p></p>
+			    Private Equity and Investment Advisory calculations including Discounted Cash Flows, Net Present Valuations, Cash on Cash, Internal Rate of Returns, Leveraged Returns, After-Tax Returns.  
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
                         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-example01.html">Read more</a>
@@ -345,7 +342,7 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                         <h2 class="mdl-card__title-text">Hospitality / Management</h2>
                     </div>
                     <div class="mdl-card__supporting-text">
-                        Payroll Management, Cost Controls, Inventory Control, Pricing and Break-Even Analysis, RevPAR and for Hospitality Management and Consultanting.
+                        Payroll Management, Cost Controls, Inventory Control, Pricing, Break-Even Analysis, RevPAR calculations for Hospitality Management and Consultanting.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
                         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-example01.html">Read more</a>
