--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                         <img class="article-image" src=" images/example-work06.jpg" border="0" alt="">
                     </div>
                     <div class="mdl-card__title">
-                        <h2 class="mdl-card__title-text">Real Estate / Financial Modeling</h2>
+                        <h2 class="mdl-card__title-text">Real Estate, Financial Modeling & Underwriting</h2>
                     </div>
                     <div class="mdl-card__supporting-text">
                         Underwriting for asset-types including Mixed-Use, Retail, Office, Hotel and Multi-family buildings.	
@@ -339,7 +339,7 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                         <img class="article-image" src=" images/example-work09.jpg" border="0" alt="">
                     </div>
                     <div class="mdl-card__title">
-                        <h2 class="mdl-card__title-text">Hospitality / Management</h2>
+                        <h2 class="mdl-card__title-text">Hospitality Management & Consulting</h2>
                     </div>
                     <div class="mdl-card__supporting-text">
                         Payroll Management, Cost Controls, Inventory Control, Pricing, Break-Even Analysis, RevPAR calculations for Hospitality Management and Consultanting.
