--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div class="portfolio-logo">
                       <!-- <img class="banner-logo" src="images/logotailorbrands5.svg" border="0" alt=""> -->
                     </div></a>
-                    <span class="mdl-layout__title"><a href="https://gerald-tom.com/index.html">Full Stack Web Development, Data Warehousing & Analytics</a></span>
+                    <span class="mdl-layout__title"><a href="https://gerald-tom.com/index.html">Full-Stack Development, Data Warehousing & Analytics</a></span>
                 </span>
             </div>
 
@@ -157,12 +157,11 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
 			    
                          Real Estate Investment Advisory has lead me to an interest in real estate data.  This is a
                          analyitical warehouse of New York building and ownership data comprised of
-                         5+ billion cells of data, optimized to process queries in milliseconds.  The database was
-                         written by first drawing up the architecture with an ERD diagram and building bridge tables.
+                         5+ billion cells of data and optimized to process queries in milliseconds.  Data was aggregated from various different sources.
+                         An ERD diagram and building bridge tables were then established for the architecture.
                            Optimization techniques were implemented on the database side including multi-column
-                            indexing, materialized views and explain analyze in raw postgresql.  The database was
-                            implemented on the frontend user-interface with flask.  The program is being used as a
-                            proprietary database to generate client leads.
+                            indexing, materialized views and explain analyze in raw postgresql.  Flask was chosen as the frontend user-interface.  
+			    The program is being used as a proprietary database to generate client leads.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
                         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0"   target="popup"
