--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                       <a href="https://www.dearisabella.net/" target="popup" onclick="window.open('https://www.dearisabella.net/','popup','width=1200,height=1200'); return false;"><h2 class="mdl-card__title-text">Business Leadership</h2></a>
                     </div>
                     <div class="mdl-card__supporting-text">
-                        For 4 years, I had run my own business with my wife.  Our company was featured on
+                        For 4 years, I had run my own business with my wife.  Our brand was featured on
                         <a href="https://www.dropbox.com/s/nbg3b0ejs4x65rt/Fox%20News%20Interview.wmv?dl=0" target="popup"
   onclick="window.open('https://www.dropbox.com/s/nbg3b0ejs4x65rt/Fox%20News%20Interview.wmv?dl=0','popup','width=1200,height=1200'); return false;">
                           Fox News</a>, Telemundo and worn by
