--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                          Real Estate Investment Advisory has lead me to an interest in real estate data.  This is a
                          analyitical warehouse of New York building and ownership data comprised of
                          5+ billion cells of data and optimized to process queries in milliseconds.  Data was aggregated from various different sources.
-                         An ERD diagram and building bridge tables were then established for the architecture.
+                         An ERD diagram and bridge tables were then established for the architecture.
                            Optimization techniques were implemented on the database side including multi-column
                             indexing, materialized views and explain analyze in raw postgresql.  Flask was chosen as the frontend user-interface.  
 			    The program is being used as a proprietary database to generate client leads.
