--- a/index.html
+++ b/index.html
@@ -325,7 +325,8 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                     <div class="mdl-card__supporting-text">
                         Underwriting for asset-types including Mixed-Use, Retail, Office, Hotel and Multi-family buildings.	
 			    <p></p>
-			    Private Equity and Investment Advisory calculations including Discounted Cash Flows, Net Present Valuations, Cash on Cash, Internal Rate of Returns, Leveraged Returns, After-Tax Returns.  
+			    Private Equity and Investment Advisory calculations including Discounted Cash Flows, Net Present Valuations, 
+			    Cash on Cash, Internal Rate of Returns, Leveraged Returns, After-Tax Returns and Promoter returns.  
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
                         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-example01.html">Read more</a>
