--- a/index.html
+++ b/index.html
@@ -155,12 +155,10 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                     <div class="mdl-card__supporting-text">
 
 			    
-                         Real Estate Investment Advisory has lead me to an interest in real estate data.  This is a
-                         analyitical warehouse of New York building and ownership data comprised of
-                         5+ billion cells of data and optimized to process queries in milliseconds.  Data was aggregated from various different sources.
+          Real Estate Investment Advisory has lead me to an interest in real estate data.  This is an analytical warehouse of New York building and ownership data comprised of
+                         5+ billion cells of data and optimized to process queries in milliseconds.  Data was aggregated from various sources.
                          An ERD diagram and bridge tables were then established for the architecture.
-                           Optimization techniques were implemented on the database side including multi-column
-                            indexing, materialized views and explain analyze in raw postgresql.  Flask was chosen as the frontend user-interface.  
+                           Optimization techniques were implemented on the database side including multi-column indexing, materialized views, and explain-analyze in raw PostgreSQL.  Flask was chosen as the frontend user-interface.  
 			    The program is being used as a proprietary database to generate client leads.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
@@ -182,7 +180,7 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                       <a href="https://www.dearisabella.net/" target="popup" onclick="window.open('https://www.dearisabella.net/','popup','width=1200,height=1200'); return false;"><h2 class="mdl-card__title-text">Business Leadership</h2></a>
                     </div>
                     <div class="mdl-card__supporting-text">
-                        For 4 years, I had run my own business with my wife.  Our brand was featured on
+                                    For 4 years, I had run my own business with my wife.  Our brand was featured on
                         <a href="https://www.dropbox.com/s/nbg3b0ejs4x65rt/Fox%20News%20Interview.wmv?dl=0" target="popup"
   onclick="window.open('https://www.dropbox.com/s/nbg3b0ejs4x65rt/Fox%20News%20Interview.wmv?dl=0','popup','width=1200,height=1200'); return false;">
                           Fox News</a>, Telemundo and worn by
@@ -192,8 +190,7 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                            as website run off of the Shopify platform with a customized theme.
                            The requirements for the theme were conceptualized on paper and edited in
                             Shopify's Liquid code through collaboration with a Liquid developer.
-                            A successful SEO campaign involving influencers, bloggers, backlink building and other page
-                            optimization techniques were also used to increase search engine rankings.
+                            A successful SEO campaign involving influencers, bloggers, backlink building, and other page optimization techniques was also used to increase search engine rankings.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
                         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://www.dearisabella.net/">Read more</a>
@@ -215,9 +212,8 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
 			<a href="portfolio-charity.html"><h2 class="mdl-card__title-text">Charity Work</h2></a>
                     </div>
                     <div class="mdl-card__supporting-text">
-                        During the height of the CV-19 pandemic in March, I organized and lead a 10-person team to
-                        collect donations and distribute PPE.  The Frontline Masks page is a collaborative
-                         effort to quickly build out a website to collect donations.
+                        During the height of the CV-19 pandemic in March, I organized and lead a 10-person team to collect donations and distribute PPE.  
+			    The Frontline Masks page is a collaborative effort to quickly build out a website to collect donations.
                          Our developers used a JAM stack to quickly build out the site for us to raise awareness.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
@@ -257,10 +253,10 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                         <h2 class="mdl-card__title-text">Web Scraper</h2>
                     </div>
                     <div class="mdl-card__supporting-text">
-                        Due to my interest in exchange rate data at the time, this is a simple web scrape of Caribbe Express
+                                       Due to my interest in exchange rate data at the time, this is a simple web scrape of Caribbe Express
                          (a currency exchange site) during my time overseas.  The original specifications called to use celery / redis
                          to do a daily scrape and insert to a database allowing a historical view of interest rates posted to the web-forum.
-			The web-forum was run off of FlaskBB meant as a platform for expats to communicate.
+			The web-forum was run off of FlaskBB meant as a platform for ex-pats to communicate.
                           Sample code and demonstration to come...
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
@@ -278,9 +274,8 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                         <h2 class="mdl-card__title-text">Interactive Brokers API</h2>
                     </div>
                     <div class="mdl-card__supporting-text">
-                        Collaborated with a Java developer on a program to calculate real-time stock options data on the
-                        Interactive Brokers API.  I wrote the requirements documentation and modeled out the formulas in excel
-                         to be able to implement the program.  The formula is similar to the well-known equities derivaties model Black-Scholes
+                    Collaborated with a Java developer on a program to calculate real-time stock options data on the
+                        Interactive Brokers API.  I wrote the requirements documentation and modeled out the formulas in excel to be able to implement the program.  The formula is similar to the well-known equities derivatives model Black-Scholes
                          without the time-regression analysis.  Attach Excel model coming soon.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
@@ -323,7 +318,7 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                         <h2 class="mdl-card__title-text">Real Estate, Financial Modeling & Underwriting</h2>
                     </div>
                     <div class="mdl-card__supporting-text">
-                        Underwriting for asset-types including Mixed-Use, Retail, Office, Hotel and Multi-family buildings.	
+                 Underwriting for asset-types including Mixed-Use, Retail, Office, Hotel, and Multi-family buildings.	
 			    <p></p>
 			    Private Equity and Investment Advisory calculations including Discounted Cash Flows, Net Present Valuations, 
 			    Cash on Cash, Internal Rate of Returns, Leveraged Returns, After-Tax Returns and Promoter returns.  
