--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
                     </div>
                     <div class="mdl-card__supporting-text">
                         <p>
-                            Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt ullamco officia. Ex officia laborum et consequat duis.
+                            You can contact me through this form.  Or just regular e-mail or phone!  Either way, it all goes to my iPhone which is always no more than 5-feet away from me unless my 4-year old snuck off with it to watch YouTube.  If I don't reply promptly, then you know what happened.
                         </p>
                         <p>
                             Excepteur reprehenderit sint exercitation ipsum consequat qui sit id velit elit. Velit anim eiusmod labore sit amet.
