--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
                             You can contact me through this form.  Or just regular e-mail or phone!  Either way, it all goes to my iPhone which is always no more than 5-feet away from me unless my 4-year old snuck off with it to watch YouTube.  If I don't reply promptly, then you know what happened.
                         </p>
                         <p>
-                            Excepteur reprehenderit sint exercitation ipsum consequat qui sit id velit elit. Velit anim eiusmod labore sit amet.
+                            All kidding aside, she's a great child and I am easy to get in touch with.  You will find an easy-going person to talk to when you call.
                         </p>
                         <form action="#" class="">
                             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
