--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                         <h2 class="mdl-card__title-text">Real Estate, Financial Modeling & Underwriting</h2>
                     </div>
                     <div class="mdl-card__supporting-text">
-                 Underwriting for asset-types including Mixed-Use, Retail, Office, Hotel, and Multi-family buildings.	
+                 Underwriting asset-types including Mixed-Use, Retail, Office, Hotel, and Multi-family buildings.	
 			    <p></p>
 			    Private Equity and Investment Advisory calculations including Discounted Cash Flows, Net Present Valuations, 
 			    Cash on Cash, Internal Rate of Returns, Leveraged Returns, After-Tax Returns and Promoter returns.  
