--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                         <h2 class="mdl-card__title-text">Hospitality Management & Consulting</h2>
                     </div>
                     <div class="mdl-card__supporting-text">
-                        Payroll Management, Cost Controls, Inventory Control, Pricing, Break-Even Analysis, RevPAR calculations for Hospitality Management and Consultanting.
+                        Payroll Management, Cost Controls, Inventory Control, Pricing, Break-Even Analysis, RevPAR calculations for Hospitality Management and Consulting.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
                         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-example01.html">Read more</a>
