--- a/contact.html
+++ b/contact.html
@@ -66,10 +66,12 @@
                     </div>
                     <div class="mdl-card__supporting-text">
                         <p>
-                            You can contact me through this form.  Or just regular e-mail or phone!  Either way, it all goes to my iPhone which is always no more than 5-feet away from me unless my 4-year old snuck off with it to watch YouTube.  If I don't reply promptly, then you know what happened.
+                            You can contact me through this form.  Or just regular e-mail or phone!
+                          
+                          <p></p>Either way, it all goes to my iPhone which is always no more than 5-feet away from me unless my 4-year old snuck off with it to watch YouTube.  If I don't reply promptly, then you know what happened.
                         </p>
                         <p>
-                            All kidding aside, she's a great child and I am easy to get in touch with.  You will find an easy-going person to talk to when you call.
+                            All kidding aside, she's a great child and I am easy to get in touch with.  When you call, you can expect to find an easy-going person to talk to that is open to conversation.
                         </p>
                         <form action="#" class="">
                             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
