--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<!-- This template was used for speed rather than elegant code.  Yes, there no template inheritance as jinja does not work with GitHub Pages.  But hey, whatever works! -->
+<!--  HELLO!!! This template was used for speed rather than elegant code.  Yes, there no template inheritance as jinja does not work with GitHub Pages. -->
 
 <!--
   Material Design Lite
