--- a/contact.html
+++ b/contact.html
@@ -147,6 +147,12 @@
                     <div class="mdl-card__media">
                         <img class="article-image" src=" images/contact-image.jpg" border="0" alt="">
                     </div>
+			
+			
+			
+			<script type="text/javascript" src="https://form.jotform.com/jsform/210532081569049"></script>
+			
+			
                     <div class="mdl-card__supporting-text">
                         <p>
                             You can contact me through this form.  Or just regular e-mail or phone!
