--- a/contact.html
+++ b/contact.html
@@ -110,8 +110,6 @@
 
 
 
-
-
 <!-- Navigation -->
             <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
                 <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
@@ -138,7 +136,26 @@
 		
 		
 		
-<script type="text/javascript" src="https://form.jotform.com/jsform/210532081569049"></script>
+
+		
+		
+		
+		
+		
+<form action="https://formspree.io/f/mdopvrro" method="POST">
+  <label>
+    Your email:
+    <input type="text" name="_replyto">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
+</form>
+		
+		
 		
 		
 		
