--- a/contact.html
+++ b/contact.html
@@ -136,29 +136,6 @@
 		
 		
 		
-
-		
-		
-		
-		
-		
-<form action="https://formspree.io/f/mdopvrro" method="POST">
-  <label>
-    Your email:
-    <input type="text" name="_replyto">
-  </label>
-  <label>
-    Your message:
-    <textarea name="message"></textarea>
-  </label>
-  <!-- your other form fields go here -->
-  <button type="submit">Send</button>
-</form>
-		
-		
-		
-		
-		
 		
 		
 		
@@ -181,7 +158,7 @@
                         <p>
                             All kidding aside, she's a great child and I am easy to get in touch with.  When you call, you can expect to find an easy-going person to talk to that is open to conversation.
                         </p>
-                        <form action="#" class="">
+                        <form action="https://formspree.io/f/mdopvrro" class="" method="POST">
                             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                                 <input class="mdl-textfield__input" pattern="[A-Z,a-z, ]*" type="text" id="Name">
                                 <label class="mdl-textfield__label" for="Name">Name...</label>
